# Adrian_assignment

./: CMakeLists.txt  README.md
documentation/: .~lock.Theory_stuff.odt#  Theory_stuff.odt  ~$eory_stuff.odt
src/: gstreamer_pipeline.cpp
